# ai-workspaces

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
