[project]
name = "ai-workspaces"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
    "fastapi>=0.115.12",
    "yfinance>=0.2.59",
    "python-dotenv>=1.1.0",
    "openai>=1.79.0",
]